<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BioMatch</string>
    <string name="title_custom">Kişisel Çekim</string>
    <string name="action_settings">Settings</string>
    <string name="giris">Giriş</string>
    <string name="kullaniciadi">Kullanıcı Adı:</string>
    <string name="sifre">Şifre:</string>
    <string name="btngiris">GİRİŞ</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="hosgeldiniz">Hoşgeldiniz ...</string>
    <string name="btnAnaliz">Analize Başla</string>
    <string name="btnOncekiAnaliz">Önceki Analizlerim</string>
    <string name="btnTurler">Tür İsimleri</string>
    <string name="btnHarita">Harita</string>
    <string name="title_activity_previous_analyze">PreviousAnalyzeActivity</string>
    <string name="twTur1">Tür 1</string>
    <string name="twTur2">Tür 2</string>
    <string name="twNot">Not</string>
    <string name="twOran">Oran(%)</string>
    <string name="title_activity_types">TypesActivity</string>
    <string name="twLatince">Latince</string>
    <string name="twTurkce">Türkçe</string>
    <string name="twArama">Tür ismi giriniz...</string>
    <string name="btnAra">Ara</string>
    <string name="title_activity_map_activty">MapActivty</string>
    <string name="title_activity_tutorial2">Tutorial2Activity</string>
    <string name="title_activity_image_manipulations">ImageManipulationsActivity</string>
    <string name="title_activity_take_pic1">TakePic1Activity</string>
    <string name="openCamera">Kamerayı Başlat</string>
    <string name="title_activity_take_pic2">TakePic2Activity</string>
    <string name="btnAnaliz2">Analiz 2</string>
    <string name="title_activity_take_pic3">TakePic3Activity</string>
    <string name="title_activity_pic_picker">PicPicker</string>
    <string name="select1">1. Fotoğrafı Seç</string>
    <string name="select2">2. Fotoğrafı Seç</string>
    <string name="analyze">Analiz</string>
    <string name="title_activity_coban">CobanActivity</string>
    <string name="txtGorevli">Görevli</string>
    <string name="txtBiyolog">Biyolog</string>
    <string name="yerelKayit">Yerel Kayıt</string>
    <string name="cevrimiciKayit">Çevrimiçi Kayıt</string>
    <string name="cek">Görüntü Çek</string>
    <string name="title_activity_take_picture_offline">TakePictureOfflineActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="gonder">Analize Gönder</string>
    <string name="title_activity_map_pic_picker">MapPicPickerActivity</string>
    <string name="btnCikis">ÇIKIŞ</string>
    <string name="btnKisiKayitEt">Kişi Kayıt Et</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="sifreTekrar">Şifre Tekrar :</string>
    <string name="btnKayitEt">Kayit Et</string>
    <string name="title_activity_bellek_">Bellek_Activity</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="title_activity_activity_custom_map_info">activity_custom_map_info</string>
    <string name="title_activity_take_picture_train_online">TakePictureTrainOnline</string>
    <string name="btnCevrimdisi">ÇEVRİMDIŞI</string>
    <string name="kisiselKayit">Kişisel Kayıt</string>
    <string name="analizeGonder">Analize Gönder</string>
    <string name="btnTrain">Eğitim Fotoğrafı Çek</string>
    <string name="title_activity_dialog">DialogActivity</string>
    <string name="selectTac">Taç Yaprak Seç</string>
    <string name="selectTacYap">Taç Yaprak</string>
    <string name="selectCanak">Çanak Yaprak</string>
    <string name="offlinecek">ÇEVRİMDIŞI ÇEK</string>
    <string name="sec">ÇEVRİMDIŞI YÜKLE</string>
    <string name="title_activity_location_activity2">LocationActivity2</string>


</resources>
