<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="@drawable/bck">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#7c000000">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:id="@+id/twType1"
                android:textSize="22sp"
                android:text="@string/twTur1"
                android:gravity="center"
                android:textColor="#000"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:id="@+id/twType2"
                android:textSize="22sp"
                android:text="@string/twTur2"
                android:gravity="center"
                android:textColor="#000"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:id="@+id/twNote"
                android:textSize="22sp"
                android:text="@string/twNot"
                android:gravity="center"
                android:textColor="#000"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:id="@+id/twRate"
                android:textSize="22sp"
                android:text="@string/twOran"
                android:gravity="center"
                android:textColor="#000"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="top"
            android:orientation="vertical">
        </LinearLayout>

    </LinearLayout>