<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bck"
    android:layout_gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MyActivity"
        android:padding="40dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtWelcome"
            android:text="@string/hosgeldiniz"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="#292e2e"
            android:paddingBottom="30dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtCobanUserName"
            android:text=""
            android:textSize="25sp"
            android:textStyle="normal"
            android:gravity="center"
            android:textColor="#292e2e"
            android:paddingBottom="30dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:id="@+id/takePictureCoban"
            android:textSize="20sp"
            android:text="@string/cek"
            android:background="@drawable/custom_button"
            android:textColor="#080808"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:id="@+id/btnUploadOffline"
            android:textSize="20sp"
            android:text="@string/offlinecek"
            android:background="@drawable/custom_button"
            android:textColor="#080808"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:id="@+id/btnSec"
            android:textSize="20sp"
            android:text="@string/sec"
            android:background="@drawable/custom_button"
            android:textColor="#080808"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:id="@+id/btnLogOut"
            android:textSize="20sp"
            android:text="@string/btnCikis"
            android:background="@drawable/custom_button"
            android:textColor="#080808"/>




    </LinearLayout>
</ScrollView>