<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bck"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MyActivity"
        android:padding="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#3affffff">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/app_name"
                android:textSize="30sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="#292e2e"
                android:typeface="monospace"
                android:paddingBottom="30dp"
                android:layout_weight="1"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher"
                android:layout_weight="0.3"/>

        </LinearLayout>

        <TextView
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kullaniciadi"
            android:textSize="25sp"
            android:textColor="#292e2e"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/txtUserName"
            android:inputType="text"
            android:textColor="#292e2e"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sifre"
            android:textSize="25sp"
            android:textColor="#292e2e"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/txtPassword"
            android:inputType="numberPassword"
            android:textColor="#292e2e"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sifreTekrar"
            android:textSize="25sp"
            android:textColor="#292e2e"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/txtPassword2"
            android:inputType="numberPassword"
            android:textColor="#292e2e"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@drawable/custom_button"
            android:textSize="20dp"
            android:id="@+id/btnSignUp"
            android:text="@string/btnKayitEt"
            android:textColor="#080808"
            />
    </LinearLayout>
</ScrollView>