<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bck"
    android:layout_gravity="center">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MyActivity"
    android:padding="40dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/giris"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="#292e2e"
        android:paddingBottom="30dp"/>


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Çoban"
            android:id="@+id/cobanButton"
            android:textSize="20sp"
            android:checked="true"

            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Biyolog"
            android:id="@+id/biyologButton"
            android:textSize="20sp"
            android:gravity="center"
             />

    </RadioGroup>


    <TextView
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kullaniciadi"
        android:textSize="25sp"
        android:textColor="#292e2e"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/txtUserName"
        android:textColor="#292e2e"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sifre"
        android:textSize="25sp"
        android:textColor="#292e2e"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/txtPassword"
        android:password="true"
        android:textColor="#292e2e"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogin"
        android:textSize="25sp"
        android:text="@string/btngiris"
        android:background="#ff474c4c"
        android:textColor="#fff"/>
</LinearLayout>
</ScrollView>