<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bck"
    android:layout_gravity="center">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MyActivity"
    android:padding="40dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtWelcome"
        android:text="@string/hosgeldiniz"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="#292e2e"
        android:paddingBottom="30dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtUserName"
        android:text=""
        android:textSize="25sp"
        android:textStyle="normal"
        android:gravity="center"
        android:textColor="#292e2e"
        android:paddingBottom="30dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@drawable/custom_button"
        android:textSize="20dp"
        android:textColor="#080808"
        android:text="ANALİZE GÖNDER"
        android:id="@+id/btnStartAnalyze"
/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@drawable/custom_button"
        android:textSize="20dp"
        android:textColor="#080808"
        android:id="@+id/btnPreviousAnalyze"
        android:text="@string/btnOncekiAnaliz"
    />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@drawable/custom_button"
        android:textSize="20dp"
        android:textColor="#080808"
        android:id="@+id/btnType"
        android:text="@string/btnTurler"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@drawable/custom_button"
        android:textSize="20dp"
        android:textColor="#080808"
        android:id="@+id/btnMap"
        android:text="@string/btnHarita" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@drawable/custom_button"
        android:textSize="20dp"
        android:textColor="#080808"
        android:id="@+id/btnSignUp"
        android:text="@string/btnKisiKayitEt"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@drawable/custom_button"
        android:textSize="20dp"
        android:textColor="#080808"
        android:id="@+id/btnLogOut"
        android:text="@string/btnCikis"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
</LinearLayout>
</ScrollView>